# pub-manager

./: CMakeLists.txt  README.md
include/: config.hpp  entities.hpp
src/: game.cpp  main.cpp
